--- a/notebooks/test_raster_index.ipynb
+++ b/notebooks/test_raster_index.ipynb
@@ -16,9 +16,8 @@
    "outputs": [],
    "source": [
     "import xarray as xr\n",
-    "import rioxarray as rio\n",
     "\n",
-    "xr.set_options(display_expand_indexes=True);"
+    "xr.set_options(display_expand_indexes=True)"
    ]
   },
   {
@@ -30,6 +29,7 @@
    "source": [
     "# TODO: rasterix pyproject\n",
     "import sys\n",
+    "\n",
     "sys.path.append(\"..\")\n",
     "from rasterix import RasterIndex"
    ]
@@ -1950,7 +1950,7 @@
    "id": "ce3502c0-3af5-4470-ba58-b46743ab3d7e",
    "metadata": {},
    "source": [
-    "We cannot compute a new affine transfrom given arbitrary array positions. To allow further data selection, pandas indexes are created for indexed spatial coordinates:"
+    "We cannot compute a new affine transform given arbitrary array positions. To allow further data selection, pandas indexes are created for indexed spatial coordinates:"
    ]
   },
   {
