Add snapshot test for rasterize

--- a/docs/rasterize/exactextract.ipynb
+++ b/docs/rasterize/exactextract.ipynb
@@ -5,7 +5,7 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "# With `exactextract.coverage`\n",
+    "# With `exactextract`\n",
     "\n",
     "Rasterix includes dask-aware wrappers for `exactextract.exact_extract`'s coverage estimation."
    ]
