--- a/docs/rasterize/exactextract.ipynb
+++ b/docs/rasterize/exactextract.ipynb
@@ -73,12 +73,49 @@
    "source": [
     "from rasterix.rasterize.exact import coverage\n",
     "\n",
-    "coverage(ds, world[[\"geometry\"]], xdim=\"longitude\", ydim=\"latitude\")"
+    "n = coverage(ds, world[[\"geometry\"]], xdim=\"longitude\", ydim=\"latitude\")\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n.isel(geometry=112).plot()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "Optionally clip to the `total_bounds` of the geometries passed in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rasterix.rasterize.exact import coverage\n",
+    "\n",
+    "coverage(\n",
+    "    ds,\n",
+    "    world[[\"geometry\"]].iloc[slice(112, 113)],\n",
+    "    xdim=\"longitude\",\n",
+    "    ydim=\"latitude\",\n",
+    "    clip=True,\n",
+    ").plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
    "metadata": {},
    "source": [
     "Notice that the output data is a `sparse.COO` array with a new dimension `geometry`. The input geometries are propagated as a coordinate variable named `geometry`.\n",
@@ -89,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "12",
    "metadata": {},
    "source": [
     "## Out-of-core support\n",
@@ -112,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
