--- a/docs/rasterize/rasterio.ipynb
+++ b/docs/rasterize/rasterio.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# With `rasterio.rasterize`\n",
     "\n",
-    "Rasterix includes dask-aware wrappers for `rasterio.features.rasterize` and `rasterio.features.geometry_mask`."
+    "Rasterix includes a dask-aware wrapper for `rasterio.features.rasterize`."
    ]
   },
   {
