Add geometry clip docs

--- a/docs/rasterize/geometry_mask.ipynb
+++ b/docs/rasterize/geometry_mask.ipynb
@@ -5,9 +5,9 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "# With rasterio `rasterize`\n",
+    "# With rasterio `geometry_mask`\n",
     "\n",
-    "Rasterix includes a dask-aware wrapper for `rasterio.features.rasterize`."
+    "Rasterix includes a dask-aware wrapper of `rasterio.features.geometry_mask` and rioxarray's `geometry_clip`"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "source": [
     "import xarray as xr\n",
     "\n",
-    "ds = xr.tutorial.open_dataset(\"eraint_uvz\")\n",
+    "ds = xr.tutorial.open_dataset(\"eraint_uvz\")[[\"u\"]]\n",
     "ds = ds.rio.write_crs(\"epsg:4326\")\n",
     "ds"
    ]
@@ -53,7 +53,8 @@
     "import geopandas as gpd\n",
     "\n",
     "world = gpd.read_file(geodatasets.get_path(\"naturalearth land\"))\n",
-    "world"
+    "asia = world.iloc[slice(112, 113)]\n",
+    "asia"
    ]
   },
   {
@@ -63,15 +64,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rasterix.rasterize.rasterio import rasterize\n",
+    "from rasterix.rasterize.rasterio import geometry_mask\n",
     "\n",
-    "n = rasterize(ds, world[[\"geometry\"]], xdim=\"longitude\", ydim=\"latitude\")\n",
-    "n.plot()"
+    "geometry_mask(ds, asia[[\"geometry\"]], xdim=\"longitude\", ydim=\"latitude\").plot()"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6",
+   "metadata": {},
+   "source": [
+    "By default, `geometry_clip` clips to the `total_bounds` of the provided geometries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rasterix.rasterize.rasterio import geometry_clip\n",
+    "\n",
+    "n = geometry_clip(ds, asia[[\"geometry\"]], xdim=\"longitude\", ydim=\"latitude\")\n",
+    "n.u.isel(month=1, level=0).plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8",
    "metadata": {},
    "source": [
     "## Out-of-core support\n",
@@ -84,31 +105,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
     "chunked = ds.chunk({\"latitude\": -1, \"longitude\": 120})\n",
-    "d = rasterize(chunked, world[[\"geometry\"]], xdim=\"longitude\", ydim=\"latitude\")\n",
+    "d = geometry_clip(chunked, asia[[\"geometry\"]], xdim=\"longitude\", ydim=\"latitude\")\n",
     "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xr.testing.assert_identical(n, d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9",
-   "metadata": {},
-   "source": [
-    "### dask.array + dask-geopandas"
    ]
   },
   {
@@ -118,9 +121,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "xr.testing.assert_identical(n, d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "### dask.array + dask-geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import dask_geopandas as dgpd\n",
     "\n",
-    "dd = rasterize(\n",
+    "dd = geometry_mask(\n",
     "    ds.chunk({\"latitude\": -1, \"longitude\": 240}),\n",
     "    dgpd.from_geopandas(world[[\"geometry\"]], npartitions=3),\n",
     "    xdim=\"longitude\",\n",
@@ -132,20 +153,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "xr.testing.assert_identical(dd, d)"
+    "dd.plot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
