--- a/docs/rasterize/geometry_mask.ipynb
+++ b/docs/rasterize/geometry_mask.ipynb
@@ -28,9 +28,10 @@
    "outputs": [],
    "source": [
     "import xarray as xr\n",
+    "import xproj  # noqa\n",
     "\n",
     "ds = xr.tutorial.open_dataset(\"eraint_uvz\")[[\"u\"]]\n",
-    "ds = ds.rio.write_crs(\"epsg:4326\")\n",
+    "ds = ds.proj.assign_crs(spatial_ref=\"epsg:4326\")\n",
     "ds"
    ]
   },
