addres more comments

--- a/docs/raster_index/indexing.ipynb
+++ b/docs/raster_index/indexing.ipynb
@@ -70,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "source = \"/vsicurl/https://noaadata.apps.nsidc.org/NOAA/G02135/south/daily/geotiff/2024/01_Jan/S_20240101_concentration_v3.0.tif\"\n",
+    "source = \"https://noaadata.apps.nsidc.org/NOAA/G02135/south/daily/geotiff/2024/01_Jan/S_20240101_concentration_v3.0.tif\"\n",
     "\n",
     "da = xr.open_dataarray(source, engine=\"rasterio\").pipe(rasterix.assign_index)\n",
     "da"
@@ -101,7 +101,7 @@
    "source": [
     "### Slicing both x and y\n",
     "\n",
-    "Slicing preserves the laziness of coordinates. The new dataset can be represented by a new affine transform."
+    "Slicing preserves the laziness of coordinates since the new dataset can be represented by a new affine transform."
    ]
   },
   {
@@ -116,22 +116,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(da_sliced.xindexes[\"x\"])\n",
-    "print(da_sliced.xindexes[\"y\"])"
+    "Compare the transforms before/after slicing."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Outer indexing with array-like indexers"
+    "(da.xindexes[\"x\"].transform(), da_sliced.xindexes[\"x\"].transform())"
    ]
   },
   {
@@ -141,8 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "da_outer = da.isel(x=[0, 2, 4], y=[0, 0, 1])\n",
-    "da_outer"
+    "print(da_sliced.xindexes[\"x\"])\n",
+    "print(da_sliced.xindexes[\"y\"])"
    ]
   },
   {
@@ -150,7 +149,7 @@
    "id": "10",
    "metadata": {},
    "source": [
-    "We cannot compute a new affine transform given arbitrary array positions, so the resulting dataset has no indexes associated with `x` and `y`."
+    "### Outer indexing with array-like indexers"
    ]
   },
   {
@@ -160,12 +159,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "da_outer.xindexes"
+    "da_outer = da.isel(x=[0, 2, 4], y=[0, 0, 1])\n",
+    "da_outer"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "12",
+   "metadata": {},
+   "source": [
+    "We cannot compute a new affine transform given arbitrary array positions, so the resulting dataset has no indexes associated with `x` and `y`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "da_outer.xindexes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14",
    "metadata": {},
    "source": [
     "### Basic indexing with scalars"
@@ -174,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,17 +212,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "15",
-   "metadata": {},
-   "source": [
-    "**FIXME** The RasterIndex should be preserved in case of partial dimension reduction."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "### Vectorized (fancy) indexing\n",
@@ -222,24 +232,24 @@
     "See the Xarray [tutorial](https://tutorial.xarray.dev/intermediate/indexing/advanced-indexing.html) for more on this topic.\n",
     "```\n",
     "\n",
-    "Indexing the spatial coordinates with Xarray `Variable` objects returns a `RasterIndex` (wrapping `PandasIndex`) for 1-dimensional variables and no index for scalar or n-dimensional variables."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "da_points = da.isel(x=xr.Variable(\"z\", [0, 1]), y=xr.Variable(\"z\", [1, 1]))\n",
-    "da_points"
+    "Indexing the spatial coordinates with Xarray `Variable`  or `DataArray` objects returns an unindexed object. The result cannot be represented by a RasterIndex in general."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "da_points = da.isel(x=xr.DataArray([0, 1], dims=\"z\"), y=xr.DataArray([1, 1], dims=\"z\"))\n",
+    "da_points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -269,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {
     "editable": true,
     "slideshow": {
